--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 14
+      - run: npm ci
       - run: node ./script.js
       - name: Commit files
         run: |
