--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,6 +22,7 @@ jobs:
         run: |
          git config --local user.email "gihub-bot.tobse.eu"
          git config --local user.name "github-james"
+         git add banner.svg
          git commit -m "Add changes" -a
       - name: Push changes
         uses: ad-m/github-push-action@master
