--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,8 @@ on:
 jobs:
   update-badge:
     runs-on: ubuntu-latest
+    outputs:
+      update-badge: ${{ steps.update-badge.outputs.update-badge }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -17,10 +19,11 @@ jobs:
         with:
           node-version: 15
       - run: npm ci
-      - run: node ./update-badge-script.js
+      - id: update-badge
+        run: node ./update-badge-script.js
 
   commit-files:
-    if: steps.update-badge.outputs.updateBadge == 'true'
+    if: needs.update-badge.outputs.update-badge} == 'true'
     runs-on: ubuntu-latest
     needs: update-badge
     steps:
